recursion.lessons.recursion.sierpinski.Sierpinski.scala.error
Sierpinski:28: error: expected start of definition
	override def run() {
                 ^Sierpinski:32: error: Unmatched closing brace '}' ignored here
}
^